# OpenCode_Ecosystem

./: .gitignore  .gitmodules  .menu_registry.json  AGENTS.md  AGENTS_PTBR.md  CHANGELOG.md  CONTRIBUTING.md  CORRIGENDUM.md  CROSS_CORRELATION_ALETHEIA_OPENCODE.md  DOSSIER_PROOF_VERIFICATION.md  GETTING_STARTED.md  GLOSSARY.md  LICENSE  OPENCODE_ECOSYSTEM.md  PARECER_TECNICO.md  PRIVACY.md  PROJECTS.md  README.md  REVOLUCOES.md  ROADMAP.md  SYNC_MANIFEST.md  TAXONOMIA_RACIOCINIOS.md  TAXONOMIA_RACIOCINIOS_AMPLIADA.md  TECHNICAL_WHITEPAPER.md  TUTORIALS.md  cross_domain_problems.json  cross_validation_report.json  diversity_test_report.json  exhaustive_olympiad_results.json  gen_graphs.py  imo_training_report.json  implementação-de-pypisearcher-2026-05-24.md  mcp_health_report.json  menu.py  opencode.json  orchestrator_result.json  package.json  real_imo_test_results.json  reasoning_sweep_report.json  setup_llm_local.bat  (+3 more)
basis-research/: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  concept_map.json  config.json  main.py  pyproject.toml  requirements.txt
basis-research/agents/: __init__.py  breaks.py  gaper.py  grounder.py  historian.py  rude.py  scribe.py  social.py  synthesizer.py  theorist.py  thinker.py  vision.py
basis-research/core/: __init__.py  argument_tree.py  breaks.py  concept_map.patch  concept_mapper.patch  concept_mapper.py  concept_mapper_medicine.patch  consensus_mcp.py  context.py  database.py  keys.py  llm.py  rate_limiter.py  references.py  utils.py
basis-research/core/db/: pipeline.db
basis-research/tools/: dados_publicos_hook.py  editais_hook.py  eval_claims.py  eval_references.py  export_seminal.py  generate_references.py  import_conceptnet.py
editais-br/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  mapeamento_editais_brasil_2026.md  nginx.conf  pyproject.toml
editais-br/.claude/: references.md  settings.local.json.example
editais-br/.claude/agents/: README.md  code-reviewer.md  planner.md  researcher.md
editais-br/.claude/hooks/: auto-format.sh  block-destructive.sh  session-end-context.sh
editais-br/.claude/memory/: MEMORY.md  decisions.md  lessons.md  patterns.md
editais-br/.claude/rules/: _example-api.md  _example-frontend.md
editais-br/.claude/skills/: README.md
editais-br/.claude/skills/bugfix/: SKILL.md
editais-br/.claude/skills/commit/: SKILL.md
editais-br/.claude/skills/deploy/: SKILL.md
editais-br/.claude/skills/pr-review/: SKILL.md
editais-br/.claude/skills/project-adopt/: SKILL.md
editais-br/.claude/skills/project-init/: SKILL.md
editais-br/.claude/skills/project-seal/: SKILL.md
editais-br/.claude/skills/publish-pattern/: SKILL.md
editais-br/.claude/skills/spec-create/: SKILL.md
editais-br/.claude/specs/: INDEX.md  _template.md  filtros-captacao.md  sistema-monitoramento-editais.md
editais-br/.github/workflows/: ci.yml  deploy.yml
editais-br/agents/: base.py  extractor.py
editais-br/api/: auth.py  database.py  main.py
editais-br/api/migrations/: env.py
editais-br/api/migrations/versions/: 88b186bfa6f3_initial.py
editais-br/api/models/: __init__.py  edital.py  job.py  portal.py
editais-br/api/routers/: buscar.py  editais.py  jobs.py
editais-br/api/schemas/: edital.py
editais-br/extractors/: base.py  html.py  pdf.py  pdf_markdown.py
editais-br/pipeline/: deduplicator.py  orchestrator.py
editais-br/scripts/: seed.py
editais-br/templates/: base.html  buscar.html  dashboard.html  detail.html  portais.html
editais-br/templates/partials/: edital_table.html
editais-br/tests/: conftest.py
editais-br/tests/fixtures/: prosas_editais.html
editais-br/tests/integration/: test_pipeline.py
editais-br/tests/unit/: test_api_editais.py  test_base_connector.py  test_beat.py  test_browser.py  test_deduplicator.py  test_discovery.py  test_docker_compose.py  test_estrutura.py  test_extractor_agent.py  test_extractors.py  test_finep.py  test_frontend.py  test_health.py  test_jobs_api.py  test_models.py  test_more_connectors.py  test_orchestrator.py  test_pdf_markdown.py  test_prosas.py  test_schemas.py  test_tasks.py  test_workflows.py
editais-br/worker/: celery_app.py  discovery.py
editais-br/worker/connectors/: base.py  browser_base.py  cnpq.py  fapeg.py  finep.py  prosas.py  sebrae.py  sigepe.py
editais-br/worker/tasks/: analyze.py  crawl.py  discover.py  extract.py  seed.py
skills/broomva/phronesis/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SKILL.md  pyproject.toml
skills/broomva/phronesis/core/: __init__.py  anonymize.py  engagement.py  events.py  frameworks.py  linter.py  orchestrator.py  render.py  revision.py  selector.py  types.py
skills/broomva/phronesis/core/extraction/: __init__.py  anonymizer.py  candidates.py  pipeline.py
skills/broomva/phronesis/docs/: README.md  methodology.md
skills/broomva/phronesis/docs/adr/: 0001-python-substrate-life-engine-phased.md  0002-frameworks-organized-by-purpose.md  0003-event-sourced-engagement-journal.md  0004-five-review-gates-non-negotiable.md  0005-anonymization-strict-by-default.md  0006-decimal-for-money.md  0007-canary-test-as-release-gate.md  0008-bision-failure-mode-linter-rules.md
skills/broomva/phronesis/frameworks/: _schema.yaml
skills/broomva/phronesis/frameworks/ai-lifecycle/: andrew-ng-pipeline.yaml  google-pair.yaml  ms-responsible-ai.yaml  quantumblack-ml.yaml
skills/broomva/phronesis/frameworks/change/: adkar.yaml  kotter-8-steps.yaml  mckinsey-influence.yaml
skills/broomva/phronesis/references/: anonymization-policy.md  extraction-workflow.md
skills/broomva/phronesis/scripts/: lint_frameworks.py
skills/broomva/phronesis/stages/: __init__.py  base.py  ideate.py  intake.py  prioritize.py  roadmap.py  scan.py
skills/broomva/phronesis/templates/: capability-heatmap.md.j2  impact-effort-matrix.md.j2  innovation-roadmap.md.j2  maturity-report.md.j2  pilot-plan.md.j2  roi-model.md.j2  use-case-dossier.md.j2
skills/broomva/phronesis/tests/: conftest.py
(+2317 files in other folders)
