[project]
name = "SEEKER"
version = "1.0.0"
description = "Multi-agent deep research intelligence pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "anthropic>=0.40.0",
    "requests>=2.31.0",
    "arxiv>=2.1.0",
]

[project.optional-dependencies]
consensus = ["mcp>=1.20.0"]
dev = ["pytest>=7.0"]

[project.scripts]
aranea = "main:main"
