[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "editais-br"
version = "0.1.0"
description = "Sistema de monitoramento e análise automática de editais de fomento"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pdfplumber>=0.11",
    "pymupdf>=1.24",
    "playwright>=1.45",
    "camoufox>=0.1",
    "openai>=1.50",           # DeepSeek (OpenAI-compatible)
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "google-generativeai>=0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "mypy>=1.11",
    "ruff>=0.6",
    "pre-commit>=3.8",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: testes que requerem serviços externos (Docker, internet)",
    "slow: testes lentos (> 1s)",
]

[tool.ruff]
target-version = "py312"
line-length = 105

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
exclude = ["**/migrations/**", ".venv"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.alembic]
script_location = "api/migrations"
